captcha image size, background and alignment fix

--- a/www/css/common/form-captcha.css
+++ b/www/css/common/form-captcha.css
@@ -1,12 +1,21 @@
 .form-captcha {
-    padding-top: 4px;
+    padding-top: 16px;
     padding-bottom: 4px;
-    padding-left: 164px;
+    padding-left: 179px;
     margin-left: 16px;
 }
+
 .form-captcha-image {
+    display: inline-block;
     vertical-align: top;
+    background-color: #eee;
+    color: #ccc;
+    width: 102px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
 }
+
 @media (max-width: 440px) {
     .form-captcha {
         padding-left: 0;
